# website

./: .dockerignore  .firebaserc  .gitignore  Dockerfile  firebase.json  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yaml  test.yaml
assets/favicon/: about.txt
boids/: Cargo.toml
boids/src/: lib.rs
src/: App.css  App.tsx  index.css  index.js
src/components/Banner/: Banner.module.css  Banner.tsx
src/components/Contact/: Contact.tsx
src/components/Experience/: Experience.module.css  Experience.tsx
src/components/Header/: Header.module.css  Header.tsx
src/components/Misc/: Misc.tsx
src/components/Nav/: Nav.module.css  Nav.tsx
src/components/Publications/: Publications.module.css  Publications.tsx
src/components/RangeSlider/: RangeSlider.module.css  RangeSlider.tsx
src/components/Timeline/: Timeline.module.css  Timeline.tsx
src/components/Title/: Title.module.css  Title.tsx
src/pages/HomePage/: HomePage.tsx
src/pages/NotFound/: NotFound.module.css  NotFound.tsx
src/pages/Projects/: Projects.tsx
src/pages/chat/: Chat.module.css  Chat.tsx
src/pages/home/: Home.tsx
website/: package-lock.json  package.json
website/src/: App.css  App.tsx
website/src/components/Education/: Education.tsx
website/src/components/Header/: Header.module.css
website/src/components/Nav/: Nav.module.css  Nav.tsx
website/src/components/Section/: Section.module.css  Section.tsx
website/src/components/Timeline/: Timeline.module.css  Timeline.tsx
website/src/components/Title/: Title.module.css
(+14 files in other folders)
