[package]
name = "boids"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.134"
wasm-bindgen = "0.2.99"
